wxc/include/ewxw/wxc_glue.h

/* wxBrush */
TClassDefExtend(wxBrush,wxGDIObject)
void       wxBrush_Assign( TSelf(wxBrush) _obj, TClass(wxBrush) brush );
TClass(wxBrush) wxBrush_CreateDefault(  );
TClass(wxBrush) wxBrush_CreateFromBitmap( TClass(wxBitmap) bitmap );
TClass(wxBrush) wxBrush_CreateFromColour( TClass(wxColour) col, int style );
void       wxBrush_Delete( TSelf(wxBrush) _obj );
void       wxBrush_GetColour( TSelf(wxBrush) _obj, TClassRef(wxColour) _ref );
void       wxBrush_GetStipple( TSelf(wxBrush) _obj, TClassRef(wxBitmap) _ref );
int        wxBrush_GetStyle( TSelf(wxBrush) _obj );
TBool      wxBrush_IsEqual( TSelf(wxBrush) _obj, TClass(wxBrush) brush );
TBool      wxBrush_Ok( TSelf(wxBrush) _obj );
void       wxBrush_SetColour( TSelf(wxBrush) _obj, TClass(wxColour) col );
void       wxBrush_SetColourSingle( TSelf(wxBrush) _obj, TChar r, TChar g, TChar b );
void       wxBrush_SetStipple( TSelf(wxBrush) _obj, TClass(wxBitmap) stipple );
void       wxBrush_SetStyle( TSelf(wxBrush) _obj, int style );